[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "Cross-platform library for managing passwords/secrets"
homepage = "https://github.com/open-source-cooperative/keyring-core"
keywords = ["password", "secret", "credential", "keychain", "cross-platform"]
license = "MIT OR Apache-2.0"
name = "keyring-core"
repository = "https://github.com/open-source-cooperative/keyring-core.git"
version = "0.1.0"
rust-version = "1.85"
edition = "2024"
exclude = [".github/"]
readme = "README.md"

[features]
sample = ["dep:dashmap"]

[dependencies]
dashmap = { version = "6.1.0", optional = true }
log = "0.4"

[dev-dependencies]
doc-comment = "0.3"
env_logger = "0.11.5"
fastrand = "2"

[package.metadata.docs.rs]
features = ["sample"]
