[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "Cross-platform library for managing passwords/secrets"
homepage = "https://github.com/open-source-cooperative/keyring-core"
keywords = ["password", "secret", "credential", "keychain", "cross-platform"]
license = "MIT OR Apache-2.0"
name = "keyring-core"
repository = "https://github.com/open-source-cooperative/keyring-core.git"
version = "0.3.0"
rust-version = "1.85"
edition = "2024"
exclude = [".github/"]
readme = "README.md"

[features]
sample = ["dep:dashmap", "dep:ron", "dep:chrono", "dep:regex", "dep:uuid"]

[dependencies]
chrono = { version = "0.4.41", optional = true }
dashmap = { version = "6.1.0", features = ["serde"], optional = true }
log = "0.4"
ron = { version = "0.10.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
regex = { version = "1.11.1", optional = true }
uuid = { version = "1.17.0", features = ["v4"], optional = true }

[dev-dependencies]
doc-comment = "0.3"
env_logger = "0.11.5"
fastrand = "2"

[package.metadata.docs.rs]
features = ["sample"]
